// Crypto Strategy Lab
// Database Schema — Candidate model + real user authentication
// PostgreSQL + TimescaleDB
//
// Fixed market scope:
//   Exchange : Binance
//   Symbol   : BTCUSDT
//
// Shared data:
//   candles
//
// User-owned data:
//   users
//   refresh_tokens
//   strategies (SYSTEM strategies are unowned; USER/AI_GENERATED require owner_user_id)
//   experiments
//   experiment_configs
//   experiment_config_strategies
//   experiment_iterations
//   candidates
//   candidate_strategies
//   backtest_runs
//   trades
//   evaluations
//   leaderboards
//   leaderboard_entries
//
// Notes:
//   - `candles` is converted to a TimescaleDB hypertable by migration SQL.
//   - News data is stored in this same PostgreSQL schema (not NoSQL) — see
//     `news` table below and artifacts/decisions.md.
//   - This replaces the earlier flat/session-based schema: there is no more
//     `sessions` table or cookie-based scoping. Every experiment belongs to
//     an authenticated `users` row, and one experiment can run many search
//     iterations, each producing one Candidate (see `experiment_iterations`
//     / `candidates` below) rather than one flat `experiment_strategies` row.
//   - Source of truth: database/migrations/003_candidate_auth_schema.sql.

Project crypto_strategy_lab {
  database_type: "PostgreSQL"
  Note: "PostgreSQL + TimescaleDB. Current market scope is fixed to Binance / BTCUSDT."
}


// ============================================================
// USERS / AUTHENTICATION
// ============================================================

Table users {
  id uuid [pk]

  email varchar(255) [not null, unique]
  password_hash text [not null]
  display_name varchar(100)

  // ACTIVE / INACTIVE / SUSPENDED
  status user_status [not null, default: 'ACTIVE']

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "Authenticated application users. Never store plaintext passwords."
}

Table refresh_tokens {
  id uuid [pk]

  user_id uuid [not null]

  token_hash text [not null, unique]
  expires_at timestamptz [not null]
  revoked_at timestamptz

  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    expires_at
  }
}


// ============================================================
// SHARED MARKET DATA
// ============================================================

// Fixed source: Binance
// Fixed symbol: BTCUSDT
//
// This table becomes a TimescaleDB hypertable.
//
// Migration:
//
// SELECT create_hypertable(
//   'candles',
//   by_range('timestamp')
// );

Table candles {
  timeframe app_timeframe [not null]
  timestamp timestamptz [not null]

  open numeric(30, 12) [not null]
  high numeric(30, 12) [not null]
  low numeric(30, 12) [not null]
  close numeric(30, 12) [not null]
  volume numeric(30, 12) [not null]

  Note: "Shared historical/realtime candle data for Binance BTCUSDT."

  indexes {
    (timeframe, timestamp) [pk]
  }
}


// ============================================================
// STRATEGY
// ============================================================

// A strategy record represents an immutable strategy version.
//
// If parameters change, a new strategy record/version should be created
// instead of modifying a strategy already used by an experiment.
// Existing experiments must continue to reference the exact
// strategy version that was used.

Table strategies {
  id uuid [pk]

  owner_user_id uuid

  name varchar(255) [not null]
  version int [not null, default: 1]

  // SYSTEM / USER / AI_GENERATED
  type strategy_type [not null]

  description text

  // TYPESCRIPT / PYTHON / OTHER
  language strategy_language

  source_code text

  // Strategy parameters / composite configuration.
  parameters jsonb [not null, default: '{}']

  is_active boolean [not null, default: true]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "SYSTEM strategies have no owner; USER and AI_GENERATED strategies require an authenticated owner (owner_user_id)."

  indexes {
    owner_user_id
    (name, version) [unique]
    type
  }
}


// ============================================================
// EXPERIMENT & SEARCH CONFIGURATION
// ============================================================

// One experiment represents one Search / Backtest run, owned by an
// authenticated user.
//
// The experiment does NOT duplicate candle data or search settings — those
// live in experiment_configs / experiment_config_strategies below.
//
// Current market scope is always Binance BTCUSDT.

Table experiments {
  id uuid [pk]

  user_id uuid [not null]

  name varchar(255)

  // PENDING / RUNNING / COMPLETED / FAILED / CANCELLED
  status experiment_status [not null, default: 'PENDING']

  started_at timestamptz
  completed_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    status
  }
}

// Immutable per-experiment search configuration: dataset window, iteration
// budget. Changing any of these creates a new Experiment rather than
// mutating this row.

Table experiment_configs {
  id uuid [pk]

  experiment_id uuid [not null, unique]

  timeframe app_timeframe [not null]
  start_time timestamptz [not null]
  end_time timestamptz [not null]
  iteration_limit int [not null, default: 10]

  created_at timestamptz [not null, default: `now()`]

  indexes {
    experiment_id [unique]
  }
}

// Selected strategy types and their fixed weight for this experiment's
// search run. Enforce weight >= 0 and SUM(weight) = 1 at the application
// level.

Table experiment_config_strategies {
  id uuid [pk]

  experiment_config_id uuid [not null]
  strategy_id uuid [not null]

  weight numeric(8, 6) [not null]

  created_at timestamptz [not null, default: `now()`]

  indexes {
    experiment_config_id
    strategy_id
    (experiment_config_id, strategy_id) [unique]
  }
}


// ============================================================
// SEARCH ITERATIONS & CANDIDATES
// ============================================================

// Each iteration of the search loop produces exactly one Candidate.

Table experiment_iterations {
  id uuid [pk]

  experiment_id uuid [not null]

  iteration_number int [not null]

  // PENDING / RUNNING / COMPLETED / FAILED
  status iteration_status [not null, default: 'PENDING']

  started_at timestamptz
  completed_at timestamptz
  error_message text

  created_at timestamptz [not null, default: `now()`]

  indexes {
    experiment_id
    status
    (experiment_id, iteration_number) [unique]
  }
}

// One Candidate is the result of one search iteration: a concrete
// composition of strategy members with generated parameters.

Table candidates {
  id uuid [pk]

  iteration_id uuid [not null, unique]

  created_at timestamptz [not null, default: `now()`]

  Note: "One Candidate is produced by exactly one experiment_iteration."

  indexes {
    iteration_id [unique]
  }
}

// The concrete strategy members (and their generated parameters) that make
// up one Candidate. The weight used to combine them is NOT stored here — it
// lives in experiment_config_strategies because it is a search-configuration
// setting shared by every Candidate in the experiment.

Table candidate_strategies {
  id uuid [pk]

  candidate_id uuid [not null]
  strategy_id uuid [not null]

  parameters jsonb [not null, default: '{}']

  created_at timestamptz [not null, default: `now()`]

  indexes {
    candidate_id
    strategy_id
    (candidate_id, strategy_id) [unique]
  }
}


// ============================================================
// BACKTEST EXECUTION
// ============================================================

Table backtest_runs {
  id uuid [pk]

  candidate_id uuid [not null, unique]

  // PENDING / RUNNING / COMPLETED / FAILED
  status backtest_status [not null, default: 'PENDING']

  started_at timestamptz
  completed_at timestamptz
  error_message text

  created_at timestamptz [not null, default: `now()`]

  indexes {
    candidate_id [unique]
    status
  }
}

Table trades {
  id uuid [pk]

  backtest_run_id uuid [not null]

  // LONG / SHORT
  side trade_side [not null]

  entry_time timestamptz [not null]
  entry_price numeric(30, 12) [not null]
  quantity numeric(30, 12) [not null]

  stop_loss numeric(30, 12)
  take_profit numeric(30, 12)

  exit_time timestamptz
  exit_price numeric(30, 12)

  profit_loss numeric(30, 12)
  return_pct numeric(12, 6)

  // SIGNAL / STOP_LOSS / TAKE_PROFIT / END_OF_BACKTEST
  exit_reason exit_reason

  created_at timestamptz [not null, default: `now()`]

  indexes {
    backtest_run_id
    (backtest_run_id, entry_time)
  }
}

Table evaluations {
  id uuid [pk]

  backtest_run_id uuid [not null, unique]

  total_return numeric(18, 8)
  profit_loss numeric(30, 12)
  win_rate numeric(10, 6)
  max_drawdown numeric(18, 8)
  number_of_trades int [not null, default: 0]
  profit_factor numeric(18, 8)
  sharpe_ratio numeric(18, 8)
  overall_score numeric(18, 8)

  created_at timestamptz [not null, default: `now()`]
}


// ============================================================
// LEADERBOARD
// ============================================================

// One leaderboard per experiment (not per user): every iteration run keeps
// the same leaderboard, while changing the search configuration creates a
// new experiment and therefore a new leaderboard.

Table leaderboards {
  id uuid [pk]

  experiment_id uuid [not null, unique]

  name varchar(255) [not null, default: 'Search Leaderboard']
  top_k int [not null, default: 10]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table leaderboard_entries {
  id uuid [pk]

  leaderboard_id uuid [not null]
  candidate_id uuid [not null]

  rank int [not null]
  score numeric(18, 8) [not null]

  created_at timestamptz [not null, default: `now()`]

  indexes {
    leaderboard_id
    (leaderboard_id, candidate_id) [unique]
    (leaderboard_id, rank) [unique]
  }
}


// ============================================================
// NEWS
// ============================================================

// Kept in the relational store per artifacts/decisions.md rather than a
// separate NoSQL store.

Table news {
  id uuid [pk]

  title text [not null]
  content text
  source varchar(255)

  published_at timestamptz
  crawled_at timestamptz [not null, default: `now()`]

  url text [unique]

  // POSITIVE / NEUTRAL / NEGATIVE
  sentiment sentiment_label
  sentiment_score numeric(8, 6)

  indexes {
    published_at
    source
    sentiment
  }
}


// ============================================================
// RELATIONSHIPS
// ============================================================

// User owns strategies (optional — SYSTEM strategies have no owner).
Ref: users.id < strategies.owner_user_id

// User owns experiments.
Ref: users.id < experiments.user_id

// Auth: user owns refresh tokens.
Ref: users.id < refresh_tokens.user_id

// Experiment has one search configuration.
Ref: experiments.id - experiment_configs.experiment_id

// Configuration selects strategy types and their weights.
Ref: experiment_configs.id < experiment_config_strategies.experiment_config_id
Ref: strategies.id < experiment_config_strategies.strategy_id

// Experiment runs many search iterations.
Ref: experiments.id < experiment_iterations.experiment_id

// Each iteration produces exactly one candidate.
Ref: experiment_iterations.id - candidates.iteration_id

// A candidate is composed of strategy members with generated parameters.
Ref: candidates.id < candidate_strategies.candidate_id
Ref: strategies.id < candidate_strategies.strategy_id

// A candidate has exactly one backtest run.
Ref: candidates.id - backtest_runs.candidate_id

// A backtest run generates simulated trades and one evaluation.
Ref: backtest_runs.id < trades.backtest_run_id
Ref: backtest_runs.id - evaluations.backtest_run_id

// Experiment owns its leaderboard.
Ref: experiments.id - leaderboards.experiment_id

// Leaderboard contains ranked candidates.
Ref: leaderboards.id < leaderboard_entries.leaderboard_id
Ref: candidates.id < leaderboard_entries.candidate_id
